nephele_cluster/cVO_summit_drone/k8s_deployment/zenoh-router.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: zenoh-fake-prometheus
#spec:
#  selector:
#    name: zenoh
#  ports:
#  - name: zenoh-api-metrics
#    protocol: TCP
#    port: 8001  # Use the InitContainer's port
#    targetPort: 8001
                     
#---            
kind: Service
apiVersion: v1
metadata:
  name: zenoh
  labels:
    app: zenoh
spec:
  type: NodePort
  ports:
  - name: zenoh-protocol
    protocol: TCP
    port: 7447    
    nodePort: 30447 #$NODE_PORT
  - name: zenoh-api
    protocol: TCP
    port: 8000
    nodePort: 30450  
  - name: zenoh-quic
    protocol: UDP
    port: 7448    
    nodePort: 30452 #$NODE_PORT  
  - name: zenoh-tls
    protocol: TCP
    port: 7449    
    nodePort: 30449 #$NODE_PORT  
  selector:
    name: zenoh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zenoh-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: zenoh
  template:
    metadata:
      name: zenoh
      labels:
        name: zenoh
    spec:
      volumes:
        - name: tls-zenoh-config
          configMap:
            name: tls-zenoh
            items:
            - key: key.pem
              path: key.pem
            - key: cert.pem
              path: cert.pem
        - name: router-zenoh-config
          configMap:
            name: zenoh-router-config
            items:
            - key: router-conf.json5
              path: router-conf.json5
#      initContainers:
#      - name: fake-prometheus-target
#        image: robopaas/my-fake-prometheus-target:latest
#        ports:
#        - containerPort: 8001
#        command:
#        - "/bin/sh"
#        - "-c"
#        - |
#          python /app/trigger_alert.py & sleep 30  # Ensures enough time for scraping
      # runtimeClassName: "nvidia"
      containers:
      - name: zenoh
        image: eclipse/zenoh:1.0.2 #eclipse/zenoh::1.0.2 #eclipse/zenoh:0.11.0 #eclipse/zenoh:0.11.0-rc.3 version for ros rmw  #eclipse/zenoh:0.11.0 version for demo tb2 
        ports:
        - containerPort: 7447
          protocol: TCP
          name: zenoh-protocol
        - containerPort: 8000
          protocol: TCP
          name: zenoh-api
        - containerPort: 7448
          protocol: UDP
          name: zenoh-quic
        - containerPort: 7449
          protocol: TCP
          name: zenoh-tls
        resources:
          requests:
            cpu: "2"
            memory: 5Gi
        volumeMounts:
        - name: tls-zenoh-config
          mountPath: /key.pem
          subPath: key.pem
        - name: tls-zenoh-config
          mountPath: /cert.pem
          subPath: cert.pem
        - name: router-zenoh-config
          mountPath: /router-conf.json5
          subPath: router-conf.json5
        args:
        - "-c router-conf.json5"
        #- "-l tcp/0.0.0.0:7447"
        - "--cfg=connect/timeout_ms:1000"
        - "--cfg=connect/exit_on_failure:false"
